--- a/app/views/resumes/_preview.html.erb
+++ b/app/views/resumes/_preview.html.erb
@@ -8,9 +8,9 @@
         <h2 class="font-bold">职位匹配</h2>
       </div>
       <div>
-        <p class="mt-2" id="job-match-preview" data-resume-target="jobMatchPreview"></p>
+        <div class="mt-2" id="job-match-preview" data-resume-target="jobMatchPreview"></div>
       </div>
-    <% end %>
+  <% end %>
 
     <% if @resume.highlight_project_experience %>
       <!-- Highlight Project Experiences First -->
