--- a/app/views/resumes/_project_experiences.html.erb
+++ b/app/views/resumes/_project_experiences.html.erb
@@ -1,6 +1,6 @@
 <% if @resume.work_experiences.any?(&:project?) %>
   <div class="text-center border-b-2 border-gray-200 my-1">
-    <h2 class="font-bold">项目经历</h2>
+    <h2 class="font-bold">项目经验</h2>
   </div>
   <% experiences.each do |experience| %>
     <div class="mt-2">
