--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -174,6 +174,9 @@
               <div class="mt-2">
                 <%= form.email_field :email, autocomplete: "email", class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
               </div>
+              <% if @resume.email&.ends_with?("@qq.com") %>
+                <p class="mt-3 text-sm leading-6 text-yellow-400">请注册新邮箱来替换 QQ 邮箱</p>
+              <% end %>
             </div>
           </div>
 
