--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <!-- Include Quill stylesheet -->
     <!-- TODO: use application.css to import css-->
     <link
-      href="https://cdn.staticfile.org/quill/2.0.0-rc.2/quill.snow.css"
+      href="https://cdn.staticfile.net/quill/2.0.0-rc.2/quill.snow.css"
       rel="stylesheet"
       />
     <!--  TODO: importmap  html2pdf -->
