--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -219,7 +219,12 @@
                   <%= work_experience_form.label :project_experience, "工作经历", class: "block text-sm font-medium leading-6 text-gray-900" %>
                   <div class="mt-2 relative">
                     <%= work_experience_form.text_area :project_experience, data: { resume_target: "projectExperience" }, rows: 8, class: "block w-full rounded-md border py-1.5 text-gray-900 shadow-sm placeholder:text-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6 pb-10" %>
-                    <button type="button" data-action="click->resume#optimizeProjectExperience" class="absolute right-2 bottom-2 rounded bg-indigo-600 px-2 py-1 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">
+                    <button
+                      type="button"
+                      data-action="click->resume#optimizeProjectExperience"
+                      data-resume-target="optimizeButton"
+                      class="absolute right-2 bottom-2 rounded bg-indigo-600 px-2 py-1 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500"
+                    >
                       优化
                     </button>
                   </div>
@@ -284,7 +289,11 @@
                   <%= work_experience_form.label :project_experience, "项目经验", class: "block text-sm font-medium leading-6 text-gray-900" %>
                   <div class="mt-2 relative">
                     <%= work_experience_form.text_area :project_experience, data: { resume_target: "projectExperience" }, rows: 8, class: "block w-full rounded-md border py-1.5 text-gray-900 shadow-sm placeholder:text-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6 pb-10" %>
-                    <button type="button" data-action="click->resume#optimizeProjectExperience" class="absolute right-2 bottom-2 rounded bg-indigo-600 px-2 py-1 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500">
+                    <button type="button"
+                            data-action="click->resume#optimizeProjectExperience"
+                            data-resume-target="optimizeButton"
+                            class="absolute right-2 bottom-2 rounded bg-indigo-600 px-2 py-1 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500"
+                    >
                       优化
                     </button>
                   </div>
