--- a/app/views/layouts/_app.html.erb
+++ b/app/views/layouts/_app.html.erb
@@ -53,6 +53,24 @@
       </div>
     </div>
   </nav>
+  <% unless logged_in? %>
+    <div class="border-l-4 border-yellow-400 bg-yellow-50 p-4">
+      <div class="flex">
+        <div class="flex-shrink-0">
+          <svg class="h-5 w-5 text-yellow-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <path fill-rule="evenodd" d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+          </svg>
+        </div>
+        <div class="ml-3">
+          <p class="text-sm text-yellow-700">
+            第一次来？
+            <a href="<%= signup_path %>" class="font-medium text-yellow-700 underline hover:text-yellow-600">认领你的专属汪汪</a>后使用我们的服务！
+          </p>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
   <header class="py-10">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <h1 class="text-3xl font-bold tracking-tight text-white">简历汪汪</h1>
