--- a/app/views/layouts/_app.html.erb
+++ b/app/views/layouts/_app.html.erb
@@ -11,7 +11,6 @@
               <div class="ml-10 flex items-baseline space-x-4">
                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                 <a href="<%= root_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">优化简历</a>
-                <a href="<%= resumes_path %>" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">我的简历</a>
               </div>
             </div>
           </div>
@@ -71,9 +70,11 @@
   <% end %>
 
   <header class="py-10">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 md:flex md:items-center md:justify-between">
       <h1 class="text-3xl font-bold tracking-tight text-white">简历汪汪</h1>
-      <a href="<%= resumes_path %>" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">我的简历</a>
+      <div class="mt-4 flex md:ml-4 md:mt-0">
+        <a href="<%= resumes_path %>" class="inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">我的简历</a>
+      </div>
     </div>
   </header>
 </div>
